--- a/elasticsearch/templates/ingress.yaml
+++ b/elasticsearch/templates/ingress.yaml
@@ -2,7 +2,7 @@
 {{- $fullName := include "elasticsearch.uname" . -}}
 {{- $httpPort := .Values.httpPort -}}
 {{- $ingressPath := .Values.ingress.path -}}
-apiVersion: networking.k8s.io/v1beta1
+apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: {{ $fullName }}
@@ -36,18 +36,24 @@ spec:
       http:
         paths:
           - path: {{ $ingressPath }}
+            pathType: Prefix
             backend:
-              serviceName: {{ $fullName }}
-              servicePort: {{ $httpPort }}
+              service:
+                name: {{ $fullName }}
+                port:
+                  number:  {{ $httpPort }}
     {{- else }}
     - host: {{ .host }}
       http:
         paths:
         {{- range .paths }}
           - path: {{ .path }}
+            pathType: Prefix
             backend:
-              serviceName: {{ $fullName }}
-              servicePort: {{ .servicePort | default $httpPort }}
+              service:
+                  name: {{ $fullName }}
+                  port:
+                    number:  {{ .servicePort | default $httpPort }}
         {{- end }}
     {{- end }}
   {{- end }}
